--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timezip",
-  "version": "1.0.0",
+  "version": "1.1.2",
   "description": "Simple archive and timestamping tool. Suitable for backup",
   "main": "dist/main.js",
   "scripts": {
@@ -24,6 +24,7 @@
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
   },
+  "keywords": ["date", "time", "zip", "archive", "backup"],
   "dependencies": {
     "adm-zip": "^0.5.10"
   }
