--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "timezip",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "Simple archive and timestamping tool. Suitable for backup",
   "main": "dist/main.js",
   "scripts": {
@@ -23,6 +23,9 @@
     "pkg": "^5.8.1",
     "rimraf": "^5.0.5",
     "typescript": "^5.3.3"
+  },
+  "bin":{
+    "timezip": "dist/cli.js"
   },
   "keywords": ["date", "time", "zip", "archive", "backup"],
   "dependencies": {
